src/snapshots/tests__lexer::tests::lex_identifier.snap
---
created: "2019-06-25T19:31:21.810205Z"
creator: insta@0.8.1
source: src/lexer.rs
expression: tokens
---
Ok(
    [
        Token {
            token_type: Ident(
                "a1234"
            ),
            token_pos: Range {
                start: Pos {
                    line: 0,
                    column: 0
                },
                end: Pos {
                    line: 0,
                    column: 5
                }
            }
        }
    ]
)
