src/snapshots/tests__lexer::tests::lex_special.snap
---
created: "2019-06-25T19:34:47.585275Z"
creator: insta@0.8.1
source: src/lexer.rs
expression: tokens
---
Ok(
    [
        Token {
            token_type: Colon,
            token_pos: Range {
                start: Pos {
                    line: 0,
                    column: 0
                },
                end: Pos {
                    line: 0,
                    column: 1
                }
            }
        },
        Token {
            token_type: Comma,
            token_pos: Range {
                start: Pos {
                    line: 0,
                    column: 1
                },
                end: Pos {
                    line: 0,
                    column: 2
                }
            }
        }
    ]
)
