src/snapshots/tests__parser::tests::parse_number_literal.snap
---
created: "2019-06-25T19:28:00.475370Z"
creator: insta@0.8.1
source: src/parser.rs
expression: ast
---
Ok(
    Literal(
        Number(
            2.0
        ),
        Range {
            start: Pos {
                line: 0,
                column: 0
            },
            end: Pos {
                line: 0,
                column: 1
            }
        }
    )
)
