src/snapshots/tests__parser::tests::parse_shape_multiple_statements.snap
---
created: "2019-06-25T19:30:33.002756Z"
creator: insta@0.8.1
source: src/parser.rs
expression: ast
---
Ok(
    Shape {
        name: "circle",
        args: [
            "r"
        ],
        stmts: [
            Expr(
                FunCall(
                    "ellipse",
                    [
                        NamedArg {
                            name: "rx",
                            expr: Name(
                                "r",
                                Range {
                                    start: Pos {
                                        line: 1,
                                        column: 14
                                    },
                                    end: Pos {
                                        line: 1,
                                        column: 15
                                    }
                                }
                            )
                        },
                        NamedArg {
                            name: "ry",
                            expr: Binary(
                                Name(
                                    "r",
                                    Range {
                                        start: Pos {
                                            line: 1,
                                            column: 21
                                        },
                                        end: Pos {
                                            line: 1,
                                            column: 22
                                        }
                                    }
                                ),
                                Mul,
                                Literal(
                                    Number(
                                        10.0
                                    ),
                                    Range {
                                        start: Pos {
                                            line: 1,
                                            column: 25
                                        },
                                        end: Pos {
                                            line: 1,
                                            column: 27
                                        }
                                    }
                                ),
                                Pos {
                                    line: 1,
                                    column: 23
                                }
                            )
                        }
                    ],
                    Range {
                        start: Pos {
                            line: 1,
                            column: 2
                        },
                        end: Pos {
                            line: 1,
                            column: 27
                        }
                    }
                ),
                Pos {
                    line: 1,
                    column: 2
                }
            ),
            Expr(
                FunCall(
                    "ellipse",
                    [
                        NamedArg {
                            name: "rx",
                            expr: Name(
                                "r",
                                Range {
                                    start: Pos {
                                        line: 2,
                                        column: 14
                                    },
                                    end: Pos {
                                        line: 2,
                                        column: 15
                                    }
                                }
                            )
                        },
                        NamedArg {
                            name: "ry",
                            expr: Name(
                                "r",
                                Range {
                                    start: Pos {
                                        line: 2,
                                        column: 21
                                    },
                                    end: Pos {
                                        line: 2,
                                        column: 22
                                    }
                                }
                            )
                        }
                    ],
                    Range {
                        start: Pos {
                            line: 2,
                            column: 2
                        },
                        end: Pos {
                            line: 2,
                            column: 22
                        }
                    }
                ),
                Pos {
                    line: 2,
                    column: 2
                }
            ),
            Expr(
                FunCall(
                    "ellipse",
                    [
                        NamedArg {
                            name: "rx",
                            expr: Name(
                                "r",
                                Range {
                                    start: Pos {
                                        line: 3,
                                        column: 14
                                    },
                                    end: Pos {
                                        line: 3,
                                        column: 15
                                    }
                                }
                            )
                        },
                        NamedArg {
                            name: "ry",
                            expr: Binary(
                                Name(
                                    "r",
                                    Range {
                                        start: Pos {
                                            line: 3,
                                            column: 21
                                        },
                                        end: Pos {
                                            line: 3,
                                            column: 22
                                        }
                                    }
                                ),
                                Mul,
                                Literal(
                                    Number(
                                        10.0
                                    ),
                                    Range {
                                        start: Pos {
                                            line: 3,
                                            column: 25
                                        },
                                        end: Pos {
                                            line: 3,
                                            column: 27
                                        }
                                    }
                                ),
                                Pos {
                                    line: 3,
                                    column: 23
                                }
                            )
                        }
                    ],
                    Range {
                        start: Pos {
                            line: 3,
                            column: 2
                        },
                        end: Pos {
                            line: 3,
                            column: 27
                        }
                    }
                ),
                Pos {
                    line: 3,
                    column: 2
                }
            ),
            Expr(
                FunCall(
                    "ellipse",
                    [
                        NamedArg {
                            name: "rx",
                            expr: Name(
                                "r",
                                Range {
                                    start: Pos {
                                        line: 4,
                                        column: 14
                                    },
                                    end: Pos {
                                        line: 4,
                                        column: 15
                                    }
                                }
                            )
                        },
                        NamedArg {
                            name: "ry",
                            expr: Binary(
                                Name(
                                    "r",
                                    Range {
                                        start: Pos {
                                            line: 4,
                                            column: 21
                                        },
                                        end: Pos {
                                            line: 4,
                                            column: 22
                                        }
                                    }
                                ),
                                Mul,
                                Literal(
                                    Number(
                                        10.0
                                    ),
                                    Range {
                                        start: Pos {
                                            line: 4,
                                            column: 25
                                        },
                                        end: Pos {
                                            line: 4,
                                            column: 27
                                        }
                                    }
                                ),
                                Pos {
                                    line: 4,
                                    column: 23
                                }
                            )
                        }
                    ],
                    Range {
                        start: Pos {
                            line: 4,
                            column: 2
                        },
                        end: Pos {
                            line: 4,
                            column: 27
                        }
                    }
                ),
                Pos {
                    line: 4,
                    column: 2
                }
            ),
            Expr(
                FunCall(
                    "ellipse",
                    [
                        NamedArg {
                            name: "rx",
                            expr: Name(
                                "r",
                                Range {
                                    start: Pos {
                                        line: 5,
                                        column: 14
                                    },
                                    end: Pos {
                                        line: 5,
                                        column: 15
                                    }
                                }
                            )
                        },
                        NamedArg {
                            name: "ry",
                            expr: Name(
                                "r",
                                Range {
                                    start: Pos {
                                        line: 5,
                                        column: 21
                                    },
                                    end: Pos {
                                        line: 5,
                                        column: 22
                                    }
                                }
                            )
                        }
                    ],
                    Range {
                        start: Pos {
                            line: 5,
                            column: 2
                        },
                        end: Pos {
                            line: 5,
                            column: 22
                        }
                    }
                ),
                Pos {
                    line: 5,
                    column: 2
                }
            ),
            Expr(
                FunCall(
                    "ellipse",
                    [
                        NamedArg {
                            name: "rx",
                            expr: Name(
                                "r",
                                Range {
                                    start: Pos {
                                        line: 6,
                                        column: 14
                                    },
                                    end: Pos {
                                        line: 6,
                                        column: 15
                                    }
                                }
                            )
                        },
                        NamedArg {
                            name: "ry",
                            expr: Name(
                                "r",
                                Range {
                                    start: Pos {
                                        line: 6,
                                        column: 21
                                    },
                                    end: Pos {
                                        line: 6,
                                        column: 22
                                    }
                                }
                            )
                        }
                    ],
                    Range {
                        start: Pos {
                            line: 6,
                            column: 2
                        },
                        end: Pos {
                            line: 6,
                            column: 22
                        }
                    }
                ),
                Pos {
                    line: 6,
                    column: 2
                }
            )
        ],
        range: Range {
            start: Pos {
                line: 0,
                column: 0
            },
            end: Pos {
                line: 7,
                column: 0
            }
        }
    }
)
